--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,75 @@
 /* pages/index/index.wxss */
+
+.index-box {
+  position: relative;
+  margin: 100px auto;
+  width: 200px;
+  height: 200px;
+  background: #ffebcd;
+  border: 1px solid #f5deb3;
+  border-radius: 50%;
+}
+
+.peo-eyes {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  width: 100%;
+  height: 100px;
+}
+
+.peo-eyes view {
+  width: 40px;
+  height: 20px;
+  border-top: 8px solid #000;
+  border-radius: 100%;
+}
+
+.peo-eyes view:first-child {
+}
+
+.peo-eyes view:last-child {
+}
+
+.peo-nose {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 40px;
+}
+
+.peo-nose view {
+  width: 20px;
+  height: 40px;
+  background: #ffdab9;
+  border-radius: 100%;
+}
+
+.peo-mouth {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 40px;
+}
+
+.peo-mouth view {
+  width: 60px;
+  height: 22px;
+  border-bottom: 10px solid #f08080;
+  border-radius: 100%;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  line-height: 30px;
+  background-color: #00bfff;
+  color: #fff;
+}
+
+button::after {
+  content: "";
+  border: 1px solid #00bfff;
+}
